chore: better cmd